--- a/episodes/01-r-basics.Rmd
+++ b/episodes/01-r-basics.Rmd
@@ -111,6 +111,7 @@ and you should see
 [1] 1
 ```
 
+:::::::::::::::::::::::::::::::::::::::  callout
 
 ## Tip: Use of white space for readability
 
