--- a/episodes/02-data-prelude.Rmd
+++ b/episodes/02-data-prelude.Rmd
@@ -24,7 +24,7 @@ source: Rmd
 
 ## Preface
 
-The Intro to R and RStudio for Genomics is a part of the Genomics Data Carpentry lessons. In this lesson we will learn the necessary skill sets for R and RStudio and apply them directly to a real next-generation sequencing (NGS) data in the variant calling format (VCF) file type. Previous Genomics Data Carpentry lessons teach learners how to generate a VCF file from FASTQ files downloaded from NCBI Sequence Read Archive (SRA), so we won't cover that here. Instead, in this episode we will give a brief overview of the data and a what VCF file types are for those who wish to teach the Intro to R and RStudio for Genomics lesson independently of the Genomics Data Carpentry lessons.
+The Intro to R for Genomics is a part of the Genomics Data Carpentry lessons. In this lesson we will learn the necessary skill sets for R and apply them directly to a real next-generation sequencing (NGS) data in the variant calling format (VCF) file type. Previous Genomics Data Carpentry lessons teach learners how to generate a VCF file from FASTQ files downloaded from NCBI Sequence Read Archive (SRA), so we won't cover that here. Instead, in this episode we will give a brief overview of the data and a what VCF file types are.
 
 This dataset was selected for several reasons, including:
 
@@ -166,7 +166,7 @@ This episode was adapted from the Data Carpentry Genomic lessons:
 
 - The dataset comes from a real world experiment in E. coli.
 - Publicly available FASTQ files can be downloaded from NCBI SRA.
-- Several steps are taken outside of R/RStudio to create VCF files from FASTQ files.
+- Several steps are taken outside of R to create VCF files from FASTQ files.
 - VCF files store variant calls in a special format.
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::
