--- a/episodes/01-r-basics.Rmd
+++ b/episodes/01-r-basics.Rmd
@@ -105,11 +105,7 @@ To see if the assignment was successful, let's print the value of `first_value` 
 first_value
 ```
 
-and you should see 
-
-```{r, purl=FALSE}
-[1] 1
-```
+and convince yourself that you the value assigned to `first_value` is `1`
 
 :::::::::::::::::::::::::::::::::::::::  callout
 
