--- a/episodes/05-dplyr.Rmd
+++ b/episodes/05-dplyr.Rmd
@@ -129,7 +129,7 @@ Hint: look at for a function called `contains()`, which can be found in the help
 
 ## Solution
 
-```{r}
+```{r, eval=FALSE}
 # First, we select "POS" and all columns with letter "i". This will contain columns Indiv and FILTER. 
 variants_subset <- select(variants, POS, contains("i"))
 # Next, we remove columns Indiv and FILTER
@@ -145,7 +145,7 @@ We can also get to `variants_result` in one line of code:
 
 ## Alternative solution
 
-```{r}
+```{r, eval=FALSE}
 variants_result <- select(variants, POS, contains("i"), -Indiv, -FILTER)
 variants_result
 ```
